style(Table): fixed header overflow error

--- a/webapp/app/containers/Widget/components/Chart/Chart.less
+++ b/webapp/app/containers/Widget/components/Chart/Chart.less
@@ -73,8 +73,7 @@
       font-style: 12px;
     }
 
-    .ant-table-header {
-      // @FIXME
+    .ant-table-fixed-header .ant-table-scroll .ant-table-header {
       margin-bottom: 0 !important;
       padding-bottom: 0 !important;
       background: transparent !important;
